Fix layout issues on bolo-cha and bebidas

--- a/src/components/MenuTabs/TabsContent/BoloCha/BoloCha.css
+++ b/src/components/MenuTabs/TabsContent/BoloCha/BoloCha.css
@@ -13,7 +13,7 @@
   .bolo-cha-content {
     display: flex;
     flex-direction: row;
-    width: 940px;
+    max-width: 940px;
     column-gap: 3rem;
     padding: 4rem 0 0 4rem;
   }
